--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="text_color">#2A2B2E</color>
+    <color name="red">#FA0000</color>
+    <color name="gray">#9F9F9F</color>
+    <color name="blue">#0048FF</color>
 </resources>
